Fixed viewport views on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;  
+  margin: 40px 0px 40px 0px;
 }
 .paper-container {
   display: flex;
   justify-content: center;
-  align-items: center; 
-  height: 700px; 
+  align-items: center;  
   width: 800px;
 }
 .paper-stage {
   display: flex; 
   padding: 20px;
-  margin-top: 10px;
+  margin: 20px 0px 20px 0px;
 }
 
 .App-header {
